<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Securoute</string>
    <string name="latitude">Lat.</string>
    <string name="longitude">Lon.</string>
    <string name="zero">0</string>
    <string name="distance_securite">Distance de sécurité</string>
    <string name="m">m</string>
    <string name="distance_arret">Distance d\'arrêt</string>
    <string name="distance_freinage">Distance de freinage</string>
    <string name="speed">Vitesse</string>
    <string name="acceleration">Acceleration</string>
    <string name="mps">m/s</string>
    <string name="mps2">m/s-2</string>
    <string name="kmh">km/h</string>

</resources>